3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

Second and last part of feature request #1543553: Inventories in artifacts/archetypes.
It's now possible to put "arch" in archetypes, they'll be correctly handled.
Like any other object, you can customize it.
 common/arch.c loader.l
Nicolas Weeger 2007-04-22

server/server.c:  Add some debug to see if objects are on swapped out
  maps in process_objects()
socket/loop.c: Hopeful fix for old bug - can be rare cases where
  next player gets freed, so code tries to process garbage player
  and crashes.
MSW 2007-04-21

lib/artifacts: fix bug #1673804: Items "of Occidental Mages" use obsolete
event_xxx fields.
Nicolas Weeger 2007-04-21

Partially implement feature request #1543553: Inventories in artifacts/archetypes.
It's now possible to have items in artifacts, they'll be inserted in object.
Doesn't yet work with archetypes, since you could possibly reference an archetype
defined *after* the current archetype.
 common/arch.c: do a deep object copy instead of a partial one
 common/loader.l: handle inventories during artifact load
 common/object.c: put copy_object_with_inv
 common/treasure.c: add inventory from artifact
 include/libproto.h: updated prototypes
 random_maps/random_map.c rproto.h: moved copy_object_with_inv to common lib
Nicolas Weeger 2007-04-21

Implement EVENT_TELL.
 plugins/cfpython/cfpython.c
 plugins/template/plugin_template.c
 server/c_chat.c plugins.c
Nicolas Weeger 2007-04-21

Add discrete damage type for weapons, and probably also spells and such.
 common/loader.l object.c
 include/object.h
 server/attack.c
Nicolas Weeger 2007-04-21
